build-storybook.log
info @storybook/react v6.0.20
info 
info clean outputDir..
info => Copying prebuild dll's..
info => Building manager..
info => Loading manager config..
(node:9915) UnhandledPromiseRejectionWarning: /Users/vergilesov/AlfaDirectory/PROGRAMMERUNG/GITHub/GitHub/Repository/.storybook/main.js:9
    "@storybook/addon-storysource"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Unexpected string
    at wrapSafe (internal/modules/cjs/loader.js:1053:16)
    at Module._compile (internal/modules/cjs/loader.js:1101:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1157:10)
    at Module.load (internal/modules/cjs/loader.js:985:32)
    at Function.Module._load (internal/modules/cjs/loader.js:878:14)
    at Module.require (internal/modules/cjs/loader.js:1025:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at interopRequireDefault (/Users/vergilesov/AlfaDirectory/PROGRAMMERUNG/GITHub/GitHub/Repository/node_modules/@storybook/core/dist/server/utils/server-require.js:66:16)
    at serverRequire (/Users/vergilesov/AlfaDirectory/PROGRAMMERUNG/GITHub/GitHub/Repository/node_modules/@storybook/core/dist/server/utils/server-require.js:103:10)
    at loadCustomPresets (/Users/vergilesov/AlfaDirectory/PROGRAMMERUNG/GITHub/GitHub/Repository/node_modules/@storybook/core/dist/server/common/custom-presets.js:21:47)
    at _default (/Users/vergilesov/AlfaDirectory/PROGRAMMERUNG/GITHub/GitHub/Repository/node_modules/@storybook/core/dist/server/manager/manager-config.js:179:143)
    at buildManager (/Users/vergilesov/AlfaDirectory/PROGRAMMERUNG/GITHub/GitHub/Repository/node_modules/@storybook/core/dist/server/build-static.js:178:56)
    at buildStaticStandalone (/Users/vergilesov/AlfaDirectory/PROGRAMMERUNG/GITHub/GitHub/Repository/node_modules/@storybook/core/dist/server/build-static.js:253:9)
    at processTicksAndRejections (internal/process/task_queues.js:97:5)
(node:9915) UnhandledPromiseRejectionWarning: Unhandled promise rejection. This error originated either by throwing inside of an async function without a catch block, or by rejecting a promise which was not handled with .catch(). To terminate the node process on unhandled promise rejection, use the CLI flag `--unhandled-rejections=strict` (see https://nodejs.org/api/cli.html#cli_unhandled_rejections_mode). (rejection id: 2)
(node:9915) [DEP0018] DeprecationWarning: Unhandled promise rejections are deprecated. In the future, promise rejections that are not handled will terminate the Node.js process with a non-zero exit code.
